# Copyright (C) 2020, Lawrence Berkeley National Laboratory.                
# All rights reserved.                                                      
#                                                                           
# This file is part of TaskEngine. The full TaskEngine copyright notice,    
# including terms governing use, modification, and redistribution, is       
# contained in the file COPYING at the root of the source code distribution 
# tree.     

AM_CPPFLAGS=-I$(top_srcdir)/src -I$(top_builddir)/src

check_PROGRAMS=

LDADD=libte.la 
